<resources>
    <string name="app_name">news</string>
    <string name="hint_no_network">网络未连接</string>
    <string name="text_register_account">注册账号</string>
    <string name="text_register_by_phone">手机注册</string>
    <string name="text_third_party_register">第三方注册</string>
    <string name="text_phone_number">手机号</string>
    <string name="text_get_verification_code">获取验证码</string>
    <string name="hint_input_phone_format">请输入11位手机号</string>
    <string name="hint_input_right_phone_format">请输入正确的手机号</string>
    <string name="hint_input_verification_code">请输入验证码</string>
    <string name="text_input_password">请输入密码</string>
    <string name="hint_password">至少8位的密码,至多16位</string>
    <string name="text_verification_code">验证码</string>
    <string name="text_verification_code_has_retrieve">验证码已重新发送</string>
    <string name="text_verification_code_length_six">验证码为6位</string>
    <string name="text_password_min_length_eight">密码最短为8位</string>
    <string name="text_password">密码</string>
    <string name="text_join_us">即刻加入</string>
    <string name="text_verification_code_has_sent">验证码已发送至</string>
    <string name="text_retrieve">重新获取</string>
</resources>
