<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/text_verification_code_has_sent"
        android:textColor="@color/center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hint_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verification_code"
            android:textColor="@color/center"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/rt_input_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_input_verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:textCursorDrawable="@drawable/color_edit_text_cursor"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_verification_code" />

        <TextView
            android:id="@+id/tv_retrieve"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_retrieve_background"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_password"
        android:textColor="@color/center"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/rt_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_input_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/color_edit_text_cursor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_join"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/selector_main_button_background"
        android:gravity="center"
        android:text="@string/text_join_us"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>