<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/view_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:textSize="26sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/view_close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/text_register_account"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:text="@string/text_register_by_phone"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_main_button_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:alpha="0.45"
            android:text="@string/text_third_party_register" />

        <ImageView
            android:id="@+id/iv_vx"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:alpha="0.85"
            android:layout_marginTop="115dp"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@mipmap/vx" />

        <View
            android:layout_width="15dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_vx"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="#22FFFFFF"/>

        <ImageView
            android:id="@+id/iv_qq"
            app:layout_constraintTop_toBottomOf="@+id/iv_vx"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:alpha="0.85"
            android:layout_width="55dp"
            android:layout_marginTop="25dp"
            android:layout_height="55dp"
            android:src="@mipmap/qq" />

        <View
            android:layout_width="15dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_qq"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="#22FFFFFF"/>

        <ImageView
            android:id="@+id/iv_vb"
            app:layout_constraintTop_toBottomOf="@+id/iv_qq"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="55dp"
            android:layout_marginTop="25dp"
            android:layout_height="55dp"
            android:src="@mipmap/vb"
            android:alpha="0.85" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>